--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.3.3",
     "openai": "^5.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
